--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 
         #grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 242.5px 242.5px 242.5px 242.5px;
+    grid-template-rows:124px 124px 124px 124px;
        
         }
 
@@ -18,7 +18,7 @@ body {
             border: 1px solid #ccc;
             text-align: center;
         }
-#one {
+/* #one {
     grid-area: 1 / 1 / 2/ 5;
 }
 
@@ -56,4 +56,27 @@ body {
 
 #ten {
     grid-area: 5 / 2 / 6 / 5;
+} */
+#one {
+    grid-column: span 4 / auto;
+}
+
+/* Second child spans 4 rows */
+#two {
+    grid-row: span 4 / auto;
+}
+
+/* Fourth child spans 2 columns */
+#four {
+    grid-column: span 2 / auto;
+}
+
+/* Fifth child also spans 2 columns */
+#five {
+    grid-column: span 2 / auto;
+}
+
+/* Tenth child spans 3 columns */
+#ten {
+    grid-column: span 3 / auto;
 }
