--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
         #grid {
     display: grid;
     grid-template-columns: 242.5px 242.5px 242.5px 242.5px;
-    grid-template-rows:124px 124px 124px 124px;
+    grid-template-rows:124px 124px 124px 124px 124px;
        
         }
 
