--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     display: grid;
     grid-template-columns: 242.5px 242.5px 242.5px 242.5px;
     grid-template-rows:124px 124px 124px 124px 124px;
-       
+       grid-gap:10px 10px;
         }
 
         div {
